Fix featured-tab specificity for square sizing, default to dark mode

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a {
 }
 
 /* Featured project tabs (Trinity AI, Retro Arcade) */
-.featured-tab {
+.square-tab.featured-tab {
   width: 280px;
   height: 280px;
   font-size: 26px;
